--- a/PresentationCore/PresentationCore.csproj
+++ b/PresentationCore/PresentationCore.csproj
@@ -30,9 +30,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System.Windows.Input\ICommandSource.cs" />
+    <Compile Include="System.Windows.Input\ICommand.cs" />
+    <Compile Include="System.Windows\IInputElement.cs" />
+    <Compile Include="System.Windows\RoutedEvent.cs" />
+    <Compile Include="System.Windows.Media\Visual.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="System.Windows.Input\" />
+    <Folder Include="System.Windows\" />
+    <Folder Include="System.Windows.Media\" />
+  </ItemGroup>
 </Project>
